--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Team 7 Action API (Node, Express and ChatGPT)",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx tsc --output public",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts"
   },
